Completar página de CV, añadir footer y arreglar menú móvil

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
-import ProjectsSection from '../components/ProjectsSection.astro';
+// La línea que importaba ProjectsSection se ha eliminado
 ---
 
 <Layout>
   <Hero />
-  <ProjectsSection />
+  {/* El componente <ProjectsSection /> se ha eliminado */}
 </Layout>
